_________________________________________________________________________________

#########################                               #########################
#######################     highRES Project Changelog     #######################
#########################                               #########################
_________________________________________________________________________________

[Version 200965a]
- added changelog and version control 
- added variables
- added Overwolf Grids by Moofy

[Version 200965b]
- fixed a 404

[Version 200965f]
- fixed changelog
- fixed gridCount
- added Ancestors: The Humankind Odyssey Grids by theEMA *cdnsync1
- added ACE COMBAT™ 7: SKIES UNKNOWN by theEMA *cdnsync2
- changed all thumbnails format to .webp
- added Zork Nemesis: The Forbidden Lands (1996) by Moofy *cdnsync3