@@ -1,24 +1,1 @@
-const targets = document.querySelectorAll('#shown');
-
-const lazyLoad = target => {
-  const io = new IntersectionObserver((entries, observer) => {
-    console.log(entries)
-    entries.forEach(entry => {
-      console.log('😍');
-
-      if (entry.isIntersecting) {
-        const img = entry.target;
-        const src = img.getAttribute('data-lazy');
-
-        img.setAttribute('src', src);
-        img.classList.add('fade');
-
-        observer.disconnect();
-      }
-    });
-  });
-
-  io.observe(target)
-};
-
-targets.forEach(lazyLoad);
+const targets=document.querySelectorAll("#shown"),lazyLoad=e=>{new IntersectionObserver((e,t)=>{console.log(e),e.forEach(e=>{if(console.log("lazyLoaded"),e.isIntersecting){const o=e.target,s=o.getAttribute("data-lazy");o.setAttribute("src",s),o.classList.add("fade"),t.disconnect()}})}).observe(e)};targets.forEach(lazyLoad);
