@@ -20,3 +20,4 @@ ________________________________________________________________________________
 - added ACE COMBAT™ 7: SKIES UNKNOWN by theEMA *cdnsync2
 - changed all thumbnails format to .webp
 - added Zork Nemesis: The Forbidden Lands (1996) by Moofy *cdnsync3
+- minified lazyLoad javascript
